--- a/specs/petstore.yaml
+++ b/specs/petstore.yaml
@@ -1,7 +1,6 @@
 openapi: 3.0.0
 info:
   title: Petstore API
-  description: API for managing a pet store
   version: 1.0.0
 servers:
   - url: http://localhost:8000/api
@@ -33,17 +32,15 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Pet'
-
   /pets/{petId}:
     get:
-      summary: Get a specific pet by ID
+      summary: Get a pet by ID
       parameters:
         - in: path
           name: petId
           required: true
           schema:
             type: integer
-            format: int64
       responses:
         '200':
           description: A pet object
@@ -54,14 +51,13 @@ paths:
         '404':
           description: Pet not found
     put:
-      summary: Update a specific pet by ID
+      summary: Update a pet by ID
       parameters:
         - in: path
           name: petId
           required: true
           schema:
             type: integer
-            format: int64
       requestBody:
         required: true
         content:
@@ -75,23 +71,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Pet'
-        '404':
-          description: Pet not found
     delete:
-      summary: Delete a specific pet by ID
+      summary: Delete a pet by ID
       parameters:
         - in: path
           name: petId
           required: true
           schema:
             type: integer
-            format: int64
       responses:
         '204':
           description: Pet deleted
-        '404':
-          description: Pet not found
-
 components:
   schemas:
     Pet:
@@ -103,11 +93,7 @@ components:
       properties:
         id:
           type: integer
-          format: int64
-          description: The unique identifier of the pet
         name:
           type: string
-          description: The name of the pet
         status:
           type: string
-          description: The status of the pet (e.g., available, pending, sold)
