--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
-fastapi==0.95.0
-uvicorn==0.22.0
-pydantic==1.10.7
-requests==2.28.1
-langgraph==0.1.0
-openai==0.27.0
-azure-ai-openai==1.0.0
-PyYAML==6.0
-python-dotenv==0.21.0
+# LangChain Core and Community Packages
+langchain-core
+langchain-community
+
+# Web Framework
+fastapi
+uvicorn
+
+# WebSocket Support
+websockets
+
+# YAML and JSON Parsing
+pyyaml
+jsonschema
+
+# HTTP Requests
+httpx
+
+# Environment Variable Management
+python-dotenv
+
+# Asynchronous Support
+aiohttp
+
+# Optional: For Frontend Development (if applicable)
+# jinja2
