--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-BASE_URL=http://localhost:8000
-SPEC_PATH=specs/petstore.yaml
-AZURE_OPENAI_ENDPOINT=https://<your-resource-name>.openai.azure.com/
-AZURE_OPENAI_KEY=<your-azure-key>
-AZURE_OPENAI_DEPLOYMENT_ID=<your-deployment-id>
-AZURE_OPENAI_API_VERSION=2023-06-01-preview
+AZURE_OPENAI_API_KEY=your_api_key
+AZURE_OPENAI_ENDPOINT=https://your-endpoint.openai.azure.com/
+AZURE_OPENAI_DEPLOYMENT_ID=your_deployment_id
+AZURE_OPENAI_API_VERSION=2023-12-01-preview
